增加reset 点位功能

--- a/CoordinateTool/CoordinateToolUI/App.xaml
+++ b/CoordinateTool/CoordinateToolUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<prism:PrismApplication x:Class="ALGTool.App"
+﻿<prism:PrismApplication x:Class="CoordinateToolUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ALGTool"
+             xmlns:local="clr-namespace:CoordinateToolUI"
              xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:prism="http://prismlibrary.com/" >
     <Application.Resources>
@@ -13,6 +13,12 @@
                 <!-- Theme setting -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Blue.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <!--<Style TargetType="{x:Type Button}" 
+                   BasedOn="{StaticResource {x:Type Button}}">
+                <Setter Property="controls:ControlsHelper.ContentCharacterCasing" Value="Normal"/>
+            </Style>-->
+            
         </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
