--- a/CoordinateTool/CoordinateToolUI/Views/CoordinateCalibrateView.xaml
+++ b/CoordinateTool/CoordinateToolUI/Views/CoordinateCalibrateView.xaml
@@ -1,19 +1,22 @@
-﻿<UserControl x:Class="ALGTool.Views.CoordinateCalibrateView"
+﻿<UserControl x:Class="CoordinateToolUI.Views.CoordinateCalibrateView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"    
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:vm="clr-namespace:ALGTool.ViewModels"
-            xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-              d:DataContext="{d:DesignInstance Type=vm:CoordinateCalibrateViewModel}"
-               d:DesignHeight="650"
+             xmlns:vm="clr-namespace:CoordinateToolUI.ViewModels"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+              d:DataContext="{d:DesignInstance Type=vm:MapCoordinateViewModel}"
+               d:DesignHeight="550"
             d:DesignWidth="600"
             mc:Ignorable="d"
              x:Name="coordinateView"
              >
+
+
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -26,10 +29,10 @@
             <!--<mah:MetroHeader DockPanel.Dock="Top" Header="Settings"  >-->
                 <UniformGrid Columns="2" Rows="2" >
                     
-                    <Button Content="Load Pixels" Command="{Binding LoadPixelsCmd}"/>
+                    <Button Height="35" Content="Load Pixels" Command="{Binding LoadPixelsCmd}"/>
                     <TextBox Text="{Binding PixelsFile}" IsReadOnly="True" VerticalContentAlignment="Center"/>
-                    
-                    <Button Content="Load Worlds" Command="{Binding LoadWorldsCmd}"/>
+
+                    <Button Height="35" Content="Load Worlds" Command="{Binding LoadWorldsCmd}"/>
                     <TextBox Text="{Binding WorldsFile}" IsReadOnly="True" VerticalContentAlignment="Center"/>
 
                     <!--<Button Content="Load MidPoint" Command="{Binding LoadMidPointCmd}" />
@@ -82,7 +85,9 @@
                                 <TextBox Text="{Binding PixelOperatorPoint.Y ,StringFormat={}{0:F3}}" IsReadOnly="False" VerticalContentAlignment="Center"/>
                             </UniformGrid>
                             
-                            <UniformGrid Columns="3">
+                            <UniformGrid Columns="4">
+                                <Button Content="Reset" Command="{Binding CmdReset}" CommandParameter="pixels" Background="SlateGray" Foreground="Black" FontSize="15"></Button>
+
                                 <Button Content="+" Command="{Binding CmdPointValueAdd}" CommandParameter="pixels" Background="LimeGreen" Foreground="Black" FontSize="30"></Button>
                                 <Button Content="-" Command="{Binding CmdPointValueSub}" CommandParameter="pixels" Background="PaleVioletRed" Foreground="Black" FontSize="30"></Button>
                                 <Button Content="x" Command="{Binding CmdPointValueMulti}" CommandParameter="pixels" Background="YellowGreen" Foreground="Black" FontSize="15"></Button>
@@ -102,7 +107,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
-                <DataGrid ItemsSource="{Binding Worlds}" SelectedIndex="{Binding SelectIndex}" CanUserSortColumns="False" AutoGenerateColumns="False" CanUserAddRows="False">
+                    <DataGrid ItemsSource="{Binding Worlds}" SelectedIndex="{Binding SelectIndex}" CanUserSortColumns="False" AutoGenerateColumns="False" CanUserAddRows="False"  BorderThickness="1" BorderBrush="LightGray">
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding X}" Header="X" Width="*"/>
                         <DataGridTextColumn Binding="{Binding Y}" Header="Y"  Width="*"/>
@@ -123,7 +128,8 @@
                                 <TextBox Text="{Binding PixelOperatorPoint.Y ,StringFormat={}{0:F3}}" IsReadOnly="False" VerticalContentAlignment="Center"/>
                             </UniformGrid>
 
-                            <UniformGrid Columns="3">
+                            <UniformGrid Columns="4">
+                                <Button Content="Reset" Command="{Binding CmdReset}" CommandParameter="worlds" Background="SlateGray" Foreground="Black" FontSize="15"></Button>
                                 <Button Content="+" Command="{Binding CmdPointValueAdd}" CommandParameter="worlds" Background="LimeGreen" Foreground="Black" FontSize="30"></Button>
                                 <Button Content="-" Command="{Binding CmdPointValueSub}" CommandParameter="worlds" Background="PaleVioletRed" Foreground="Black" FontSize="30"></Button>
                                 <Button Content="x" Command="{Binding CmdPointValueMulti}" CommandParameter="worlds" Background="YellowGreen" Foreground="Black" FontSize="15"></Button>
