--- a/CoordinateTool/CoordinateToolUI/Views/MainWindow.xaml
+++ b/CoordinateTool/CoordinateToolUI/Views/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<mah:MetroWindow x:Class="ALGTool.Views.MainWindow"
+﻿<mah:MetroWindow x:Class="CoordinateToolUI.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:v="clr-namespace:ALGTool.Views"
+        xmlns:v="clr-namespace:CoordinateToolUI.Views"
         xmlns:prism="http://prismlibrary.com/"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                  xmlns:vm="clr-namespace:ALGTool.ViewModels"
+                  xmlns:vm="clr-namespace:CoordinateToolUI.ViewModels"
         prism:ViewModelLocator.AutoWireViewModel="True"
         Title="{Binding Title}" Height="550" Width="800" 
             SaveWindowPosition="True"
