增加图标，更新默认输出路径

--- a/CoordinateTool/CoordinateToolUI/Views/MainWindow.xaml
+++ b/CoordinateTool/CoordinateToolUI/Views/MainWindow.xaml
@@ -36,7 +36,7 @@
                 </Border>
             </mah:MetroTabItem>
 
-            <mah:MetroTabItem Height="35" >
+            <mah:MetroTabItem Height="35"  Visibility="Hidden">
 
                 <mah:MetroTabItem.Header>
                     <TextBlock Text="Tcp Calibration" VerticalAlignment="Center" Foreground="White"/>
